Working on MultiRoot